[update] update code